reorganized portfolio image folder system

--- a/portfolio.html
+++ b/portfolio.html
@@ -135,9 +135,9 @@
                 <!-- Single Gallery Item -->
                 <div class="col-12 col-sm-6 col-lg-3 single_gallery_item portfolio concentration mb-30 wow fadeInUp" data-wow-delay="300ms">
                     <div class="single-portfolio-content">
-                        <img src="img/concentration/con10.jpg" alt="">
+                        <img src="img/portfolio/portfolio1.jpg" alt="">
                         <div class="hover-content">
-                            <a href="concentration/concentration1.html">1</a>
+                            <a href="concentration/concentration1.html">+</a>
                         </div>
                     </div>
                 </div>
@@ -145,9 +145,9 @@
                 <!-- Single Gallery Item -->
                 <div class="col-12 col-sm-6 col-lg-3 single_gallery_item portfolio breadth mb-30 wow fadeInUp" data-wow-delay="300ms">
                     <div class="single-portfolio-content">
-                        <img src="img/portfolio/portfolio5.jpg" alt="">
+                        <img src="img/portfolio/portfolio2.jpg" alt="">
                         <div class="hover-content">
-                            <a href="concentration/concentration3.html">3</a>
+                            <a href="concentration/concentration3.html">+</a>
                         </div>
                     </div>
                 </div>
@@ -155,9 +155,9 @@
                 <!-- Single Gallery Item -->
                   <div class="col-12 col-sm-6 col-lg-6 single_gallery_item portfolio breadth mb-30 wow fadeInUp" data-wow-delay="300ms">
                       <div class="single-portfolio-content">
-                          <img src="img/breadth/breadth5.jpg" alt="">
+                          <img src="img/portfolio/portfolio3.jpg" alt="">
                           <div class="hover-content">
-                              <a href="concentration/concentration2.html">2</a>
+                              <a href="concentration/concentration2.html">+</a>
                           </div>
                       </div>
                   </div>
@@ -165,9 +165,9 @@
                 <!-- Single Gallery Item -->
                 <div class="col-12 col-sm-6 col-lg-3 single_gallery_item portfolio breadth mb-30 wow fadeInUp" data-wow-delay="300ms">
                     <div class="single-portfolio-content">
-                        <img src="img/portfolio/portfolio7.jpg" alt="">
+                        <img src="img/portfolio/portfolio4.jpg" alt="">
                         <div class="hover-content">
-                            <a href="concentration/concentration4.html">4</a>
+                            <a href="concentration/concentration4.html">+</a>
                         </div>
                     </div>
                 </div>
@@ -175,9 +175,9 @@
                 <!-- Single Gallery Item -->
                 <div class="col-12 col-sm-6 col-lg-3 single_gallery_item portfolio mb-30 wow fadeInUp" data-wow-delay="300ms">
                     <div class="single-portfolio-content">
-                        <img src="img/portfolio/portfolio1.jpg" alt="">
+                        <img src="img/portfolio/portfolio5.jpg" alt="">
                         <div class="hover-content">
-                            <a href="concentration/concentration5.html">5</a>
+                            <a href="concentration/concentration5.html">+</a>
                         </div>
                     </div>
                 </div>
@@ -185,9 +185,9 @@
                 <!-- Single Gallery Item -->
                 <div class="col-12 col-sm-6 col-lg-3 single_gallery_item portfolio mb-30 wow fadeInUp" data-wow-delay="300ms">
                     <div class="single-portfolio-content">
-                        <img src="img/breadth/breadth7.jpg" alt="">
+                        <img src="img/portfolio/portfolio6.jpg" alt="">
                         <div class="hover-content">
-                            <a href="concentration/concentration6.html">6</a>
+                            <a href="concentration/concentration6.html">+</a>
                         </div>
                     </div>
                 </div>
@@ -195,9 +195,9 @@
                 <!-- Single Gallery Item -->
                 <div class="col-12 col-sm-6 col-lg-3 single_gallery_item concentration mb-30 wow fadeInUp" data-wow-delay="300ms">
                     <div class="single-portfolio-content">
-                        <img src="img/concentration/con5.jpg" alt="">
+                        <img src="img/portfolio/portfolio7.jpg" alt="">
                         <div class="hover-content">
-                            <a href="concentration/concentration7.html">7</a>
+                            <a href="concentration/concentration7.html">+</a>
                         </div>
                     </div>
                 </div>
@@ -207,43 +207,43 @@
                     <div class="single-portfolio-content">
                         <img src="img/portfolio/portfolio8.jpg" alt="">
                         <div class="hover-content">
-                            <a href="concentration/concentration8.html">8</a>
+                            <a href="concentration/concentration8.html">+</a>
                         </div>
                     </div>
                 </div>
 
                 <div class="col-12 col-sm-6 col-lg-3 single_gallery_item concentration mb-30 wow fadeInUp" data-wow-delay="300ms">
                     <div class="single-portfolio-content">
-                        <img src="img/portfolio/portfolio4.jpg" alt="">
+                        <img src="img/portfolio/portfolio9.jpg" alt="">
                         <div class="hover-content">
-                            <a href="concentration/concentration9.html">9</a>
+                            <a href="concentration/concentration9.html">+</a>
                         </div>
                     </div>
                 </div>
 
                 <div class="col-12 col-sm-6 col-lg-3 single_gallery_item portfolio breadth mb-30 wow fadeInUp" data-wow-delay="300ms">
                     <div class="single-portfolio-content">
-                        <img src="img/portfolio/portfolio2.jpg" alt="">
+                        <img src="img/portfolio/portfolio10.jpg" alt="">
                         <div class="hover-content">
-                            <a href="concentration1.html">+</a>
+                            <a href="concentrationconcentration1.html">+</a>
                         </div>
                     </div>
                 </div>
 
                 <div class="col-12 col-sm-6 col-lg-3 single_gallery_item portfolio concentration mb-30 wow fadeInUp" data-wow-delay="300ms">
                     <div class="single-portfolio-content">
-                        <img src="img/portfolio/portfolio6.jpg" alt="">
+                        <img src="img/portfolio/portfolio11.jpg" alt="">
                         <div class="hover-content">
-                            <a href="concentration/concentration10.html">10</a>
+                            <a href="concentration/concentration10.html">+</a>
                         </div>
                     </div>
                 </div>
 
                 <div class="col-12 col-sm-6 col-lg-3 single_gallery_item portfolio mb-30 wow fadeInUp" data-wow-delay="300ms">
                     <div class="single-portfolio-content">
-                        <img src="img/portfolio/portfolio3.jpg" alt="">
+                        <img src="img/portfolio/portfolio12.jpg" alt="">
                         <div class="hover-content">
-                            <a href="concentration1.html">+</a>
+                            <a href="concentration/concentration1.html">+</a>
                         </div>
                     </div>
                 </div>
@@ -252,7 +252,7 @@
                     <div class="single-portfolio-content">
                         <img src="img/portfolio/portfolio13.jpg" alt="">
                         <div class="hover-content">
-                            <a href="concentration1.html">+</a>
+                            <a href="concentration/concentration1.html">+</a>
                         </div>
                     </div>
                 </div>
