bug fix, made first portfolio individual page

--- a/portfolio/portfolio14.html
+++ b/portfolio/portfolio14.html
@@ -100,7 +100,7 @@
             <div class="row h-100 align-items-center">
                 <div class="col-12">
                     <div class="breadcrumb-content text-center">
-                        <h2 class="page-title">No. 1: Lorem Ipsum</h2>
+                        <h2 class="page-title">Portfolio</h2>
                         <nav aria-label="breadcrumb">
 
                         </nav>
@@ -117,21 +117,19 @@
             <div class="row align-items-center">
                 <div class="col-12 col-lg-6">
                     <div class="about-us-content mb-80">
-                        <h3 class="wow fadeInUp" data-wow-delay="100ms">We Live For Passion</h3>
+                        <h3 class="wow fadeInUp" data-wow-delay="100ms">Ephemeral</h3>
                         <div class="line wow fadeInUp" data-wow-delay="200ms"></div>
-                        <p class="wow fadeInUp" data-wow-delay="300ms">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et do sunt explicabo. Nemo enim ipsam et dolore magnam aliquam quaerat voluptatem.</p>
-                        <p class="wow fadeInUp" data-wow-delay="400ms">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et do sunt explicabo. Nemo enim ipsam et dolore magnam aliquam quaerat voluptatem.</p>
-
+                        <p class="wow fadeInUp" data-wow-delay="300ms">A personal piece of one of my best friends during the most memorable time of my life. On the last day before our departure, I took a photo of her looking out into the distance as we watched the sunrise. I truly cherish the short amount of time we spent together, and wanted to convey the beauty of my friend's colorful and vibrant personality, even with such a solemn expression. I made this piece rather quick, using rapid brush strokes in a “messy” sort of style to convey the ephemeral aspect. I also painted a tan background so that my friend would stand out with the vibrant colors to reflect her personality.</p>
                     </div>
                 </div>
                 <div class="col-12 col-lg-6">
                     <div class="mb-80 wow fadeInUp" data-wow-delay="100ms">
-                      <div class="single-portfolio-content">
-                          <img src="../img/concentration/con1.jpg" alt="">
-                          <div class="hover-content">
+                      <div>
+                          <img src="../img/portfolio/portfolio14.jpg" alt="">
+                          <!--<div class="hover-content">
                               <a href="../img/concentration/con1closeup.jpg" class="portfolio-img">+</a>
                               <a href="../img/concentration/con1.jpg" class="portfolio-img">+</a>
-                          </div>
+                          </div>-->
                       </div>
                     </div>
                 </div>
