--- a/portfolio.html
+++ b/portfolio.html
@@ -257,6 +257,15 @@
                     </div>
                 </div>
 
+                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item breadth mb-30 wow fadeInUp" data-wow-delay="300ms">
+                    <div class="single-portfolio-content">
+                        <img src="img/portfolio/portfolio14.jpg" alt="">
+                        <div class="hover-content">
+                            <a href="portfolio/portfolio14.html">+</a>
+                        </div>
+                    </div>
+                </div>
+
             </div>
         </div>
     </div>
