adding most individual portfolio pieces

--- a/portfolio/portfolio1.html
+++ b/portfolio/portfolio1.html
@@ -94,19 +94,47 @@
     <!-- Header Area End -->
 
 
+    <!-- Breadcrumb Area Start -->
+    <section class="breadcrumb-area bg-img bg-overlay jarallax" style="background-image: url(../img/bg-img/portfolio.jpg);">
+        <div class="container h-100">
+            <div class="row h-100 align-items-center">
+                <div class="col-12">
+                    <div class="breadcrumb-content text-center">
+                        <h2 class="page-title">Portfolio</h2>
+                        <nav aria-label="breadcrumb">
+                            <ol class="breadcrumb justify-content-center">
+                                <li class="breadcrumb-item"><a href="index.html"><i class="icon_house_alt"></i> Home</a></li>
+                                <li class="breadcrumb-item active" aria-current="page">Portfolio</li>
+                            </ol>
+                        </nav>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- Breadcrumb Area End -->
+
     <!-- About Us Area Start -->
-    <div class="about-us-area section-padding-80-0 clearfix"><br>
+    <div class="about-us-area section-padding-80-0 clearfix">
         <div class="container">
             <div class="row align-items-center">
-              <div class="col-12 col-lg-12">
-                  <div class="about-us-content mb-80">
-                      <h3 class="wow fadeInUp" data-wow-delay="100ms">No. 1: Lorem Ipsum</h3>
-                      <div class="line wow fadeInUp" data-wow-delay="200ms"></div>
-                      <img src="../img/concentration/con1.png" alt="">
-                        <br>
-                        <br>
-                        <p class="wow fadeInUp" data-wow-delay="300ms">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et do sunt explicabo. Nemo enim ipsam et dolore magnam aliquam quaerat voluptatem.</p>
-                        <p class="wow fadeInUp" data-wow-delay="400ms">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et do sunt explicabo. Nemo enim ipsam et dolore magnam aliquam quaerat voluptatem.</p>
+                <div class="col-12 col-lg-6">
+                    <div class="about-us-content mb-80">
+                        <h3 class="wow fadeInUp" data-wow-delay="100ms">3 A.M.</h3>
+                        <div class="line wow fadeInUp" data-wow-delay="200ms"></div>
+                        <p class="wow fadeInUp" data-wow-delay="300ms">In this personal piece, I display a visual representation of my internal dialogue during the late hours of the night. When the rest of the world is silent, I often spend hours lying in my room, contemplating the philosophical implications of my existence. During these moments, I often stare at the ceiling, unmoving, and think back on my failures, successes, and insecurities. I chose a gray color palette with muted blues, greens and pinks to illustrate an imaginative yet melancholy atmosphere. I also used a flat plane, almost like a video game landscape concept; In doing so, I also depict a physical representation of doubt standing beside me, another “character” as the world around my bed warps into supernatural yet familiar land. I like to call it “a personal therapy session featuring me with me.”</p>
+                    </div>
+                </div>
+                <div class="col-12 col-lg-6">
+                    <div class="mb-80 wow fadeInUp" data-wow-delay="100ms">
+                      <div class="single-portfolio-content">
+                          <img src="../img/portfolio/portfolio1.jpg" alt="">
+                          <div class="hover-content">
+                              <a href="../img/close_ups/1_1.jpg" class="portfolio-img">+</a>
+                              <a href="../img/portfolio/portfolio1.jpg" class="portfolio-img">+</a>
+                          </div>
+                      </div>
+                      <figcaption><br>Click to see close-ups!</figcaption>
                     </div>
                 </div>
             </div>
