--- a/portfolio/portfolio3.html
+++ b/portfolio/portfolio3.html
@@ -94,19 +94,46 @@
     <!-- Header Area End -->
 
 
+    <!-- Breadcrumb Area Start -->
+    <section class="breadcrumb-area bg-img bg-overlay jarallax" style="background-image: url(../img/bg-img/portfolio.jpg);">
+        <div class="container h-100">
+            <div class="row h-100 align-items-center">
+                <div class="col-12">
+                    <div class="breadcrumb-content text-center">
+                        <h2 class="page-title">Portfolio</h2>
+                        <nav aria-label="breadcrumb">
+                            <ol class="breadcrumb justify-content-center">
+                                <li class="breadcrumb-item"><a href="index.html"><i class="icon_house_alt"></i> Home</a></li>
+                                <li class="breadcrumb-item active" aria-current="page">Portfolio</li>
+                            </ol>
+                        </nav>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- Breadcrumb Area End -->
+
     <!-- About Us Area Start -->
-    <div class="about-us-area section-padding-80-0 clearfix"><br>
+    <div class="about-us-area section-padding-80-0 clearfix">
         <div class="container">
             <div class="row align-items-center">
-              <div class="col-12 col-lg-12">
-                  <div class="about-us-content mb-80">
-                      <h3 class="wow fadeInUp" data-wow-delay="100ms">No. 1: Lorem Ipsum</h3>
-                      <div class="line wow fadeInUp" data-wow-delay="200ms"></div>
-                      <img src="../img/concentration/con1.png" alt="">
-                        <br>
-                        <br>
-                        <p class="wow fadeInUp" data-wow-delay="300ms">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et do sunt explicabo. Nemo enim ipsam et dolore magnam aliquam quaerat voluptatem.</p>
-                        <p class="wow fadeInUp" data-wow-delay="400ms">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et do sunt explicabo. Nemo enim ipsam et dolore magnam aliquam quaerat voluptatem.</p>
+                <div class="col-12 col-lg-6">
+                    <div class="about-us-content mb-80">
+                        <h3 class="wow fadeInUp" data-wow-delay="100ms">Euphoria on Ice</h3>
+                        <div class="line wow fadeInUp" data-wow-delay="200ms"></div>
+                        <p class="wow fadeInUp" data-wow-delay="300ms">As a figure skater for over 10 years, I'm extremely familiar with the feeling of euphoria one experiences as soon as they step into the world of something they love. In this personal piece, I wanted to paint the feeling of adrenaline filling my body as I take the ice, relishing the work I've contributed over the years. It's as if everything becomes magical, shutting out the outside world and creating a personal space for myself alone. I felt that using acrylic paint would be an effective way to utilize my color palette and blend colors to portray reflections on the ice. I used a limited color palette of mostly blues and pinks to illustrate this picturesque and mystical feeling, as well as creating a harsh contrast of lighting from the outside to illuminate the area. I also included perspective to display the full rink from a more personal point of view. At the far end, a window of the outside is visible with a more colorful, realistic palette to display the contrast.</p>
+                    </div>
+                </div>
+                <div class="col-12 col-lg-6">
+                    <div class="mb-80 wow fadeInUp" data-wow-delay="100ms">
+                      <div>
+                          <img src="../img/portfolio/portfolio3.jpg" alt="">
+                          <!--<div class="hover-content">
+                              <a href="../img/concentration/con1closeup.jpg" class="portfolio-img">+</a>
+                              <a href="../img/concentration/con1.jpg" class="portfolio-img">+</a>
+                          </div>-->
+                      </div>
                     </div>
                 </div>
             </div>
