--- a/index.html
+++ b/index.html
@@ -152,7 +152,148 @@
         </div>
     </section>
     <!-- Welcome Area End -->
+    <div class="alime-portfolio-area section-padding-80 clearfix">
+        <div class="container-fluid">
 
+            <div class="row alime-portfolio">
+                <!-- Single Gallery Item -->
+                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item portfolio concentration mb-30 wow fadeInUp" data-wow-delay="300ms">
+                    <div class="single-portfolio-content">
+                        <img src="img/portfolio/portfolio1.jpg" alt="">
+                        <div class="hover-content">
+                            <a href="portfolio/portfolio1.html">+</a>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Single Gallery Item -->
+                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item portfolio breadth mb-30 wow fadeInUp" data-wow-delay="300ms">
+                    <div class="single-portfolio-content">
+                        <img src="img/portfolio/portfolio2.jpg" alt="">
+                        <div class="hover-content">
+                            <a href="portfolio/portfolio2.html">+</a>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Single Gallery Item -->
+                  <div class="col-12 col-sm-6 col-lg-6 single_gallery_item portfolio breadth mb-30 wow fadeInUp" data-wow-delay="300ms">
+                      <div class="single-portfolio-content">
+                          <img src="img/portfolio/portfolio3.jpg" alt="">
+                          <div class="hover-content">
+                              <a href="portfolio/portfolio3.html">+</a>
+                          </div>
+                      </div>
+                  </div>
+
+                <!-- Single Gallery Item -->
+                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item portfolio breadth mb-30 wow fadeInUp" data-wow-delay="300ms">
+                    <div class="single-portfolio-content">
+                        <img src="img/portfolio/portfolio4.jpg" alt="">
+                        <div class="hover-content">
+                            <a href="portfolio/portfolio4.html">+</a>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Single Gallery Item -->
+                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item portfolio mb-30 wow fadeInUp" data-wow-delay="300ms">
+                    <div class="single-portfolio-content">
+                        <img src="img/portfolio/portfolio5.jpg" alt="">
+                        <div class="hover-content">
+                            <a href="portfolio/portfolio5.html">+</a>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Single Gallery Item -->
+                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item portfolio mb-30 wow fadeInUp" data-wow-delay="300ms">
+                    <div class="single-portfolio-content">
+                        <img src="img/portfolio/portfolio6.jpg" alt="">
+                        <div class="hover-content">
+                            <a href="portfolio/portfolio6.html">+</a>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Single Gallery Item -->
+                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item concentration mb-30 wow fadeInUp" data-wow-delay="300ms">
+                    <div class="single-portfolio-content">
+                        <img src="img/portfolio/portfolio7.jpg" alt="">
+                        <div class="hover-content">
+                            <a href="portfolio/portfolio7.html">+</a>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Single Gallery Item -->
+                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item concentration mb-30 wow fadeInUp" data-wow-delay="300ms">
+                    <div class="single-portfolio-content">
+                        <img src="img/portfolio/portfolio8.jpg" alt="">
+                        <div class="hover-content">
+                            <a href="portfolio/portfolio8.html">+</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item concentration mb-30 wow fadeInUp" data-wow-delay="300ms">
+                    <div class="single-portfolio-content">
+                        <img src="img/portfolio/portfolio9.jpg" alt="">
+                        <div class="hover-content">
+                            <a href="portfolio/portfolio9.html">+</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item portfolio breadth mb-30 wow fadeInUp" data-wow-delay="300ms">
+                    <div class="single-portfolio-content">
+                        <img src="img/portfolio/portfolio10.jpg" alt="">
+                        <div class="hover-content">
+                            <a href="portfolio/portfolio10.html">+</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item portfolio concentration mb-30 wow fadeInUp" data-wow-delay="300ms">
+                    <div class="single-portfolio-content">
+                        <img src="img/portfolio/portfolio11.jpg" alt="">
+                        <div class="hover-content">
+                            <a href="portfolio/portfolio11.html">+</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item portfolio mb-30 wow fadeInUp" data-wow-delay="300ms">
+                    <div class="single-portfolio-content">
+                        <img src="img/portfolio/portfolio12.jpg" alt="">
+                        <div class="hover-content">
+                            <a href="portfolio/portfolio12.html">+</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item breadth mb-30 wow fadeInUp" data-wow-delay="300ms">
+                    <div class="single-portfolio-content">
+                        <img src="img/portfolio/portfolio13.jpg" alt="">
+                        <div class="hover-content">
+                            <a href="portfolio/portfolio13.html">+</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item breadth mb-30 wow fadeInUp" data-wow-delay="300ms">
+                    <div class="single-portfolio-content">
+                        <img src="img/portfolio/portfolio14.jpg" alt="">
+                        <div class="hover-content">
+                            <a href="portfolio/portfolio14.html">+</a>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </div>
+    <!-- Gallery Area End -->
     <!-- Follow Area Start -->
     <section class="follow-area clearfix">
         <div class="container">
