--- a/portfolio/portfolio11.html
+++ b/portfolio/portfolio11.html
@@ -94,19 +94,47 @@
     <!-- Header Area End -->
 
 
+    <!-- Breadcrumb Area Start -->
+    <section class="breadcrumb-area bg-img bg-overlay jarallax" style="background-image: url(../img/bg-img/portfolio.jpg);">
+        <div class="container h-100">
+            <div class="row h-100 align-items-center">
+                <div class="col-12">
+                    <div class="breadcrumb-content text-center">
+                        <h2 class="page-title">Portfolio</h2>
+                        <nav aria-label="breadcrumb">
+                            <ol class="breadcrumb justify-content-center">
+                                <li class="breadcrumb-item"><a href="index.html"><i class="icon_house_alt"></i> Home</a></li>
+                                <li class="breadcrumb-item active" aria-current="page">Portfolio</li>
+                            </ol>
+                        </nav>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- Breadcrumb Area End -->
+
     <!-- About Us Area Start -->
-    <div class="about-us-area section-padding-80-0 clearfix"><br>
+    <div class="about-us-area section-padding-80-0 clearfix">
         <div class="container">
             <div class="row align-items-center">
-              <div class="col-12 col-lg-12">
-                  <div class="about-us-content mb-80">
-                      <h3 class="wow fadeInUp" data-wow-delay="100ms">No. 1: Lorem Ipsum</h3>
-                      <div class="line wow fadeInUp" data-wow-delay="200ms"></div>
-                      <img src="../img/concentration/con1.png" alt="">
-                        <br>
-                        <br>
-                        <p class="wow fadeInUp" data-wow-delay="300ms">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et do sunt explicabo. Nemo enim ipsam et dolore magnam aliquam quaerat voluptatem.</p>
-                        <p class="wow fadeInUp" data-wow-delay="400ms">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et do sunt explicabo. Nemo enim ipsam et dolore magnam aliquam quaerat voluptatem.</p>
+                <div class="col-12 col-lg-6">
+                    <div class="about-us-content mb-80">
+                        <h3 class="wow fadeInUp" data-wow-delay="100ms">For the Greater Good</h3>
+                        <div class="line wow fadeInUp" data-wow-delay="200ms"></div>
+                        <p class="wow fadeInUp" data-wow-delay="300ms">In this assignment, I was tasked to choose a 30-second clip from the movie <i>Hot Fuzz</i>, and create a poster out of it. Two colors outside of black and white were allowed, and I could only use typography. I chose a scene where “For the greater good” was repeatedly chanted, as the main character uncovers the truth of a seemingly peaceful yet deadly town. I chose light blue and a rusty red-brown as my two colors to represent the eerie tone of the night scene, and utilized transparent gradients and rounded text to show the echoing voices and flashlights. I also had the words connect, with the weight of “Greater Good” on the bottom as a visual representation of the pivotal realization during that scene. I specifically chose this scene because its message can connect to our society as a whole. Many crimes and injustices have been covered up to maintain order, and those with greater power often corrupt with false claims in an attempt to redeem their actions.</p>
+                    </div>
+                </div>
+                <div class="col-12 col-lg-6">
+                    <div class="mb-80 wow fadeInUp" data-wow-delay="100ms">
+                      <div class="single-portfolio-content">
+                          <img src="../img/portfolio/portfolio11.jpg" alt="">
+                          <div class="hover-content">
+                              <a href="../img/close_ups/11_2.jpg" class="portfolio-img">+</a>
+                              <a href="../img/close_ups/11_1.jpg" class="portfolio-img">+</a>
+                          </div>
+                      </div>
+                      <figcaption><br>Click to see close-ups!</figcaption>
                     </div>
                 </div>
             </div>
