--- a/portfolio/portfolio12.html
+++ b/portfolio/portfolio12.html
@@ -94,19 +94,52 @@
     <!-- Header Area End -->
 
 
+    <!-- Breadcrumb Area Start -->
+    <section class="breadcrumb-area bg-img bg-overlay jarallax" style="background-image: url(../img/bg-img/portfolio.jpg);">
+        <div class="container h-100">
+            <div class="row h-100 align-items-center">
+                <div class="col-12">
+                    <div class="breadcrumb-content text-center">
+                        <h2 class="page-title">Portfolio</h2>
+                        <nav aria-label="breadcrumb">
+                            <ol class="breadcrumb justify-content-center">
+                                <li class="breadcrumb-item"><a href="index.html"><i class="icon_house_alt"></i> Home</a></li>
+                                <li class="breadcrumb-item active" aria-current="page">Portfolio</li>
+                            </ol>
+                        </nav>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- Breadcrumb Area End -->
+
     <!-- About Us Area Start -->
-    <div class="about-us-area section-padding-80-0 clearfix"><br>
+    <div class="about-us-area section-padding-80-0 clearfix">
         <div class="container">
             <div class="row align-items-center">
-              <div class="col-12 col-lg-12">
-                  <div class="about-us-content mb-80">
-                      <h3 class="wow fadeInUp" data-wow-delay="100ms">No. 1: Lorem Ipsum</h3>
-                      <div class="line wow fadeInUp" data-wow-delay="200ms"></div>
-                      <img src="../img/concentration/con1.png" alt="">
-                        <br>
-                        <br>
-                        <p class="wow fadeInUp" data-wow-delay="300ms">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et do sunt explicabo. Nemo enim ipsam et dolore magnam aliquam quaerat voluptatem.</p>
-                        <p class="wow fadeInUp" data-wow-delay="400ms">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et do sunt explicabo. Nemo enim ipsam et dolore magnam aliquam quaerat voluptatem.</p>
+                <div class="col-12 col-lg-6">
+                    <div class="about-us-content mb-80">
+                        <h3 class="wow fadeInUp" data-wow-delay="100ms">Hollow Men</h3>
+                        <div class="line wow fadeInUp" data-wow-delay="200ms"></div>
+                        <p class="wow fadeInUp" data-wow-delay="300ms">Our assignment was to create an artists’ book with any text we chose. I decided to create a visual poetry book for Verse 5 of <i>The Hollow Men</i>, by T.S. Elliot. I created a modified version of an accordion book, which allowed me to use the folded sides as mirrors for the repetitive text of “through the-,” and the unfolded sides for the “falls the shadow” segments. The modified accordion style also allows me to use multiple sides and perspectives to depict the distorted, fragmented reality and lost identity of man. I took advantage of this format by illustrating and printing humanoid figures on the sides, so that readers get a multi-faced experience of simultaneously reading the text and the visuals. I also chose Galaxis Polaris Condensed as my font to portray the delicate fragility of the text.</p>
+                    </div>
+                </div>
+                <div class="col-12 col-lg-6">
+                    <div class="mb-80 wow fadeInUp" data-wow-delay="100ms">
+                      <div class="single-portfolio-content">
+                          <img src="../img/portfolio/portfolio12.jpg" alt="">
+                          <div class="hover-content">
+                              <a href="../img/close_ups/12_7.jpg" class="portfolio-img">+</a>
+                              <a href="../img/close_ups/12_6.jpg" class="portfolio-img">+</a>
+                              <a href="../img/close_ups/12_5.jpg" class="portfolio-img">+</a>
+                              <a href="../img/close_ups/12_4.jpg" class="portfolio-img">+</a>
+                              <a href="../img/close_ups/12_3.jpg" class="portfolio-img">+</a>
+                              <a href="../img/close_ups/12_2.jpg" class="portfolio-img">+</a>
+                              <a href="../img/close_ups/12_1.jpg" class="portfolio-img">+</a>
+                          </div>
+                      </div>
+                      <figcaption><br>Click to see close-ups!</figcaption>
                     </div>
                 </div>
             </div>
