--- a/portfolio/portfolio14.html
+++ b/portfolio/portfolio14.html
@@ -102,7 +102,10 @@
                     <div class="breadcrumb-content text-center">
                         <h2 class="page-title">Portfolio</h2>
                         <nav aria-label="breadcrumb">
-
+                            <ol class="breadcrumb justify-content-center">
+                                <li class="breadcrumb-item"><a href="index.html"><i class="icon_house_alt"></i> Home</a></li>
+                                <li class="breadcrumb-item active" aria-current="page">Portfolio</li>
+                            </ol>
                         </nav>
                     </div>
                 </div>
