--- a/portfolio/portfolio2.html
+++ b/portfolio/portfolio2.html
@@ -94,19 +94,51 @@
     <!-- Header Area End -->
 
 
+    <!-- Breadcrumb Area Start -->
+    <section class="breadcrumb-area bg-img bg-overlay jarallax" style="background-image: url(../img/bg-img/portfolio.jpg);">
+        <div class="container h-100">
+            <div class="row h-100 align-items-center">
+                <div class="col-12">
+                    <div class="breadcrumb-content text-center">
+                        <h2 class="page-title">Portfolio</h2>
+                        <nav aria-label="breadcrumb">
+                            <ol class="breadcrumb justify-content-center">
+                                <li class="breadcrumb-item"><a href="index.html"><i class="icon_house_alt"></i> Home</a></li>
+                                <li class="breadcrumb-item active" aria-current="page">Portfolio</li>
+                            </ol>
+                        </nav>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- Breadcrumb Area End -->
+
     <!-- About Us Area Start -->
-    <div class="about-us-area section-padding-80-0 clearfix"><br>
+    <div class="about-us-area section-padding-80-0 clearfix">
         <div class="container">
             <div class="row align-items-center">
-              <div class="col-12 col-lg-12">
-                  <div class="about-us-content mb-80">
-                      <h3 class="wow fadeInUp" data-wow-delay="100ms">No. 1: Lorem Ipsum</h3>
-                      <div class="line wow fadeInUp" data-wow-delay="200ms"></div>
-                      <img src="../img/concentration/con1.png" alt="">
-                        <br>
-                        <br>
-                        <p class="wow fadeInUp" data-wow-delay="300ms">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et do sunt explicabo. Nemo enim ipsam et dolore magnam aliquam quaerat voluptatem.</p>
-                        <p class="wow fadeInUp" data-wow-delay="400ms">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et do sunt explicabo. Nemo enim ipsam et dolore magnam aliquam quaerat voluptatem.</p>
+                <div class="col-12 col-lg-6">
+                    <div class="about-us-content mb-80">
+                        <h3 class="wow fadeInUp" data-wow-delay="100ms">Modern Music</h3>
+                        <div class="line wow fadeInUp" data-wow-delay="200ms"></div>
+                        <p class="wow fadeInUp" data-wow-delay="300ms">In this assignment, we were asked to make a typeface through analog methods. I aimed to create a typeface combining modern-day fonts with piano notes to represent how a traditional instrument conforms to today’s society and musical culture. I cut out music notes from a printed copy of Scheherazade’s “The Sea and Sinbad's Ship.” I pieced different components together, and digitized final versions of each letter. I chose this piece due to its reference to Orientalism and Eastern history. Furthermore, the rhythm of the piece itself mirrors the dynamism in my font. I merged the music notes with Futura, allowing a sans-serif, modern aesthetic. I then expanded on the assignment to create a personal project: a typography booklet. In my booklet, I explained the concept, design, and style choices, and provided a few illustrative spreads. The book is primarily composed of gold and black to represent the elegance of the grand piano, as well as the sleekness of a popular modern color scheme.</p>
+                    </div>
+                </div>
+                <div class="col-12 col-lg-6">
+                    <div class="mb-80 wow fadeInUp" data-wow-delay="100ms">
+                      <div class="single-portfolio-content">
+                          <img src="../img/portfolio/portfolio2.jpg" alt="">
+                          <div class="hover-content">
+                              <a href="../img/close_ups/2_6.jpg" class="portfolio-img">+</a>
+                              <a href="../img/close_ups/2_5.jpg" class="portfolio-img">+</a>
+                              <a href="../img/close_ups/2_4.jpg" class="portfolio-img">+</a>
+                              <a href="../img/close_ups/2_3.jpg" class="portfolio-img">+</a>
+                              <a href="../img/close_ups/2_2.jpg" class="portfolio-img">+</a>
+                              <a href="../img/close_ups/2_1.jpg" class="portfolio-img">+</a>
+                          </div>
+                      </div>
+                      <figcaption><br>Click to see close-ups!</figcaption>
                     </div>
                 </div>
             </div>
