--- a/portfolio/portfolio6.html
+++ b/portfolio/portfolio6.html
@@ -11,24 +11,8 @@
     <title>Shannon Lin | Art Portfolio</title>
 
     <!-- Stylesheet -->
-    <link rel="stylesheet" href="style.css">
-    <style>
-    @media only screen and (min-width: 840px) {
-      #mustbecol1[style] {
-        left: 0% !important;
-      }
-      #mustbecol2[style] {
-        left: 25% !important;
-      }
-      #mustbecol3[style] {
-        left: 49.9999% !important;
-      }
-      #mustbecol4[style] {
-        left: 74.9999% !important;
-      }
-    }
+    <link rel="stylesheet" href="../style.css">
 
-    </style>
 </head>
 
 <body>
@@ -47,7 +31,7 @@
                         <!-- Close -->
                         <button type="button" class="btn close-btn" data-dismiss="modal"><i class="ti-close"></i></button>
                         <!-- Form -->
-                        <form action="index.html" method="post">
+                        <form action="../index.html" method="post">
                             <input type="search" name="top-search-bar" class="form-control" placeholder="Search and hit enter...">
                             <button type="submit">Search</button>
                         </form>
@@ -67,7 +51,7 @@
                     <nav class="classy-navbar justify-content-between" id="alimeNav">
 
                         <!-- Logo -->
-                        <a class="nav-brand" href="./index.html"><img src="./img/core-img/sl_logo.png" alt=""></a>
+                        <a class="nav-brand" href="../index.html"><img src="../img/core-img/sl_logo.png" alt=""></a>
 
                         <!-- Navbar Toggler -->
                         <div class="classy-navbar-toggler">
@@ -83,16 +67,16 @@
                             <!-- Nav Start -->
                             <div class="classynav">
                                 <ul id="nav">
-                                    <li><a href="./index.html">Home</a></li>
-                                    <li class="active"><a href="./portfolio.html">Portfolio</a>
+                                    <li><a href="../index.html">Home</a></li>
+                                    <li><a href="../portfolio.html">Portfolio</a>
                                     </li>
-                                    <li><a href="./about.html">About</a></li>
-                                    <li><a href="./gallery.html">Résumé</a></li>
+                                    <li><a href="../about.html">About</a></li>
+                                    <li><a href="../gallery.html">Résumé</a></li>
                                     <li><a href="https://shanngens.com">Shanngens</a>
                                         <ul class="dropdown">
-                                            <li><a href="./index.html">- About</a></li>
-                                            <li><a href="./index.html">- YouTube</a></li>
-                                            <li><a href="./index.html">- Instagram</a></li>
+                                            <li><a href="../index.html">- About</a></li>
+                                            <li><a href="../index.html">- YouTube</a></li>
+                                            <li><a href="../index.html">- Instagram</a></li>
                                         </ul>
                                     </li>
                                     <li><a href="">Contact</a></li>
@@ -107,9 +91,11 @@
             </div>
         </div>
     </header>
+    <!-- Header Area End -->
+
 
     <!-- Breadcrumb Area Start -->
-    <section class="breadcrumb-area bg-img bg-overlay jarallax" style="background-image: url(img/bg-img/portfolio.jpg);">
+    <section class="breadcrumb-area bg-img bg-overlay jarallax" style="background-image: url(../img/bg-img/portfolio.jpg);">
         <div class="container h-100">
             <div class="row h-100 align-items-center">
                 <div class="col-12">
@@ -127,149 +113,33 @@
         </div>
     </section>
     <!-- Breadcrumb Area End -->
-    <!-- Gallery Area Start -->
-    <div class="alime-portfolio-area section-padding-80 clearfix">
-        <div class="container-fluid">
 
-            <div class="row alime-portfolio">
-                <!-- Single Gallery Item -->
-                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item portfolio concentration mb-30 wow fadeInUp" data-wow-delay="300ms">
-                    <div class="single-portfolio-content">
-                        <img src="img/portfolio/portfolio1.jpg" alt="">
-                        <div class="hover-content">
-                            <a href="portfolio/portfolio1.html">+</a>
-                        </div>
+    <!-- About Us Area Start -->
+    <div class="about-us-area section-padding-80-0 clearfix">
+        <div class="container">
+            <div class="row align-items-center">
+                <div class="col-12 col-lg-6">
+                    <div class="about-us-content mb-80">
+                        <h3 class="wow fadeInUp" data-wow-delay="100ms">Overflow</h3>
+                        <div class="line wow fadeInUp" data-wow-delay="200ms"></div>
+                        <p class="wow fadeInUp" data-wow-delay="300ms">In this personal piece, I discuss my personal characteristic of mindless chatter, and how it connects to the flaws of our learning system. I often find myself regurgitating mindless information without preamble, and with little processing--whether it be reading the news, internet articles, or textbooks. I experimented with multiple mediums, and purposely kept parts of the canvas blank and un-gessoed. In doing so, the piece displays visible signs of repeated layering, symbolizing the inconsistent layering of knowledge.</p>
                     </div>
                 </div>
-
-                <!-- Single Gallery Item -->
-                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item portfolio breadth mb-30 wow fadeInUp" data-wow-delay="300ms">
-                    <div class="single-portfolio-content">
-                        <img src="img/portfolio/portfolio2.jpg" alt="">
-                        <div class="hover-content">
-                            <a href="portfolio/portfolio2.html">+</a>
-                        </div>
-                    </div>
-                </div>
-
-                <!-- Single Gallery Item -->
-                  <div class="col-12 col-sm-6 col-lg-6 single_gallery_item portfolio breadth mb-30 wow fadeInUp" data-wow-delay="300ms">
-                      <div class="single-portfolio-content">
-                          <img src="img/portfolio/portfolio3.jpg" alt="">
-                          <div class="hover-content">
-                              <a href="portfolio/portfolio3.html">+</a>
-                          </div>
+                <div class="col-12 col-lg-6">
+                    <div class="mb-80 wow fadeInUp" data-wow-delay="100ms">
+                      <div>
+                          <img src="../img/portfolio/portfolio6.jpg" alt="">
+                          <!--<div class="hover-content">
+                              <a href="../img/concentration/con1closeup.jpg" class="portfolio-img">+</a>
+                              <a href="../img/concentration/con1.jpg" class="portfolio-img">+</a>
+                          </div>-->
                       </div>
-                  </div>
-
-                <!-- Single Gallery Item -->
-                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item portfolio breadth mb-30 wow fadeInUp" data-wow-delay="300ms">
-                    <div class="single-portfolio-content">
-                        <img src="img/portfolio/portfolio4.jpg" alt="">
-                        <div class="hover-content">
-                            <a href="portfolio/portfolio4.html">+</a>
-                        </div>
                     </div>
                 </div>
-
-                <!-- Single Gallery Item -->
-                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item portfolio mb-30 wow fadeInUp" data-wow-delay="300ms">
-                    <div class="single-portfolio-content">
-                        <img src="img/portfolio/portfolio5.jpg" alt="">
-                        <div class="hover-content">
-                            <a href="portfolio/portfolio5.html">+</a>
-                        </div>
-                    </div>
-                </div>
-
-                <!-- Single Gallery Item -->
-                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item portfolio mb-30 wow fadeInUp" data-wow-delay="300ms">
-                    <div class="single-portfolio-content">
-                        <img src="img/portfolio/portfolio6.jpg" alt="">
-                        <div class="hover-content">
-                            <a href="portfolio/portfolio6.html">+</a>
-                        </div>
-                    </div>
-                </div>
-
-                <!-- Single Gallery Item -->
-                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item concentration mb-30 wow fadeInUp" data-wow-delay="300ms">
-                    <div class="single-portfolio-content">
-                        <img src="img/portfolio/portfolio7.jpg" alt="">
-                        <div class="hover-content">
-                            <a href="portfolio/portfolio7.html">+</a>
-                        </div>
-                    </div>
-                </div>
-
-                <!-- Single Gallery Item -->
-                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item concentration mb-30 wow fadeInUp" data-wow-delay="300ms">
-                    <div class="single-portfolio-content">
-                        <img src="img/portfolio/portfolio8.jpg" alt="">
-                        <div class="hover-content">
-                            <a href="portfolio/portfolio8.html">+</a>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item concentration mb-30 wow fadeInUp" data-wow-delay="300ms">
-                    <div class="single-portfolio-content">
-                        <img src="img/portfolio/portfolio9.jpg" alt="">
-                        <div class="hover-content">
-                            <a href="portfolio/portfolio9.html">+</a>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item portfolio breadth mb-30 wow fadeInUp" data-wow-delay="300ms">
-                    <div class="single-portfolio-content">
-                        <img src="img/portfolio/portfolio10.jpg" alt="">
-                        <div class="hover-content">
-                            <a href="portfolio/portfolio10.html">+</a>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item portfolio concentration mb-30 wow fadeInUp" data-wow-delay="300ms">
-                    <div class="single-portfolio-content">
-                        <img src="img/portfolio/portfolio11.jpg" alt="">
-                        <div class="hover-content">
-                            <a href="portfolio/portfolio11.html">+</a>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item portfolio mb-30 wow fadeInUp" data-wow-delay="300ms">
-                    <div class="single-portfolio-content">
-                        <img src="img/portfolio/portfolio12.jpg" alt="">
-                        <div class="hover-content">
-                            <a href="portfolio/portfolio12.html">+</a>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item breadth mb-30 wow fadeInUp" data-wow-delay="300ms">
-                    <div class="single-portfolio-content">
-                        <img src="img/portfolio/portfolio13.jpg" alt="">
-                        <div class="hover-content">
-                            <a href="portfolio/portfolio13.html">+</a>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item breadth mb-30 wow fadeInUp" data-wow-delay="300ms">
-                    <div class="single-portfolio-content">
-                        <img src="img/portfolio/portfolio14.jpg" alt="">
-                        <div class="hover-content">
-                            <a href="portfolio/portfolio14.html">+</a>
-                        </div>
-                    </div>
-                </div>
-
             </div>
         </div>
     </div>
-    <!-- Gallery Area End -->
+    <!-- About Us Area End -->
 
     <!-- Follow Area Start -->
     <section class="follow-area clearfix">
@@ -290,7 +160,7 @@
         <div class="instragram-feed-area owl-carousel">
             <!-- Single Instagram Item -->
             <div class="single-instagram-item">
-                <img src="img/insta/insta1new.png" alt="">
+                <img src="../img/insta/insta1new.png" alt="">
                 <div class="instagram-hover-content text-center d-flex align-items-center justify-content-center">
                     <a href="https://www.instagram.com/p/BvFjCk9AML6/">
                         <i class="ti-instagram" aria-hidden="true"></i>
@@ -300,7 +170,7 @@
             </div>
             <!-- Single Instagram Item -->
             <div class="single-instagram-item">
-                <img src="img/insta/insta2.jpg" alt="">
+                <img src="../img/insta/insta2.jpg" alt="">
                 <div class="instagram-hover-content text-center d-flex align-items-center justify-content-center">
                     <a href="https://www.instagram.com/p/B1P30YFlNDX/">
                         <i class="ti-instagram" aria-hidden="true"></i>
@@ -310,7 +180,7 @@
             </div>
             <!-- Single Instagram Item -->
             <div class="single-instagram-item">
-                <img src="img/insta/insta3.png" alt="">
+                <img src="../img/insta/insta3.png" alt="">
                 <div class="instagram-hover-content text-center d-flex align-items-center justify-content-center">
                     <a href="https://www.instagram.com/p/Bz6zC3NFvvl/">
                         <i class="ti-instagram" aria-hidden="true"></i>
@@ -320,7 +190,7 @@
             </div>
             <!-- Single Instagram Item -->
             <div class="single-instagram-item">
-                <img src="img/insta/insta4.png" alt="">
+                <img src="../img/insta/insta4.png" alt="">
                 <div class="instagram-hover-content text-center d-flex align-items-center justify-content-center">
                     <a href="https://www.instagram.com/p/Bww-8_Bg90r/">
                         <i class="ti-instagram" aria-hidden="true"></i>
@@ -330,7 +200,7 @@
             </div>
             <!-- Single Instagram Item -->
             <div class="single-instagram-item">
-                <img src="img/insta/insta5.png" alt="">
+                <img src="../img/insta/insta5.png" alt="">
                 <div class="instagram-hover-content text-center d-flex align-items-center justify-content-center">
                     <a href="https://www.instagram.com/p/B1kWHPSFMUk/">
                         <i class="ti-instagram" aria-hidden="true"></i>
@@ -340,7 +210,7 @@
             </div>
             <!-- Single Instagram Item -->
             <div class="single-instagram-item">
-                <img src="img/insta/insta6.png" alt="">
+                <img src="../img/insta/insta6.png" alt="">
                 <div class="instagram-hover-content text-center d-flex align-items-center justify-content-center">
                     <a href="https://www.instagram.com/p/BzUKL2SlsY2/">
                         <i class="ti-instagram" aria-hidden="true"></i>
@@ -380,15 +250,15 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Shann
 
     <!-- **** All JS Files ***** -->
     <!-- jQuery 2.2.4 -->
-    <script src="js/jquery.min.js"></script>
+    <script src="../js/jquery.min.js"></script>
     <!-- Popper -->
-    <script src="js/popper.min.js"></script>
+    <script src="../js/popper.min.js"></script>
     <!-- Bootstrap -->
-    <script src="js/bootstrap.min.js"></script>
+    <script src="../js/bootstrap.min.js"></script>
     <!-- All Plugins -->
-    <script src="js/alime.bundle.js"></script>
+    <script src="../js/alime.bundle.js"></script>
     <!-- Active -->
-    <script src="js/default-assets/active.js"></script>
+    <script src="../js/default-assets/active.js"></script>
 
 </body>
 
